--- a/views/root.erb
+++ b/views/root.erb
@@ -1,15 +1,12 @@
 <h1 class="title">
   Memo App <a class="button is-link" href="/new">追加</a>
 </h1>
+<p class="subtitle">memoの一覧</p>
 
-<p class="subtitle">
-  memoの一覧
-</p>
-
-<ul>
-<% if @memos %>
-  <% @memos.each do |memo| %>
-    <li><%= memo[:title] %></li>
-  <% end %>
-<% end %>
-</ul>
+<div class="content">
+  <ul>
+    <% @memos.each do |memo| %>
+      <li><%= memo[:title] %></li>
+    <% end %>
+  </ul>
+</div>
