--- a/views/new.erb
+++ b/views/new.erb
@@ -1,9 +1,9 @@
 <div class="field">
   <div class="control">
     <form action="memo" method="POST">
-      <input class="" type="text" placeholder="title" name="title">
-      <input class="" type="text" placeholder="body" name="body">
-      <input type="submit">
+      <input class="input" type="text" placeholder="title" name="title">
+      <textarea class="textarea mt-30" type="text" placeholder="body" name="body"></textarea>
+      <input class="button is-primary mt-30" type="submit">
     </form>
   </div>
 </div>
