--- a/views/root.erb
+++ b/views/root.erb
@@ -6,7 +6,7 @@
 <div class="content">
   <ul>
     <% @memos.each do |memo| %>
-      <li><%= memo[:title] %></li>
+      <li><%= memo["title"] %></li>
     <% end %>
   </ul>
 </div>
