--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
       </div>
     </header>
     <div class="container mt-30">
+      <h1 class="title">Memo App </h1>
       <%= yield %>
     </div>
   </body>
