--- a/views/root.erb
+++ b/views/root.erb
@@ -1,12 +1,10 @@
-<h1 class="title">
-  Memo App <a class="button is-link" href="/new">追加</a>
-</h1>
-<p class="subtitle">memoの一覧</p>
+<a class="button is-link" href="/new">追加</a>
+<p class="subtitle mt-30">All memo's title :)</p>
 
 <div class="content">
   <ul>
     <% @memos.each do |memo| %>
-      <li><%= memo["title"] %></li>
+      <li><a href="/memo/<%= memo["id"]%>"><%= memo["title"] %></a></li>
     <% end %>
   </ul>
 </div>
